Started work, will finish after gaming with the lads.

--- a/BVND.csproj
+++ b/BVND.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="WinForms.DataVisualization" Version="1.9.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="UserControls\PMCC Controls\DataGivenSteps\" />
+  </ItemGroup>
+
 </Project>
